--- a/_config.yml
+++ b/_config.yml
@@ -31,18 +31,8 @@ collections:
     output: true
     permalink: /:collection/:name/
 
-# Defaults
+# Defaults - using minima theme defaults
 defaults:
-  - scope:
-      path: ""
-      type: "pages"
-    values:
-      layout: "default"
-  - scope:
-      path: ""
-      type: "posts"
-    values:
-      layout: "post"
   - scope:
       path: ""
       type: "daily_pages"
