--- a/.github/workflows/daily-content-management.yml
+++ b/.github/workflows/daily-content-management.yml
@@ -2,7 +2,7 @@ name: Daily Content Management
 
 on:
   schedule:
-    - cron: '0 2 * * *'
+    - cron: '0 0 * * *' #  At the end of every day
   workflow_dispatch:
 
 permissions:
