--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -11,6 +11,12 @@ on:
   push:
     branches: ["main"]
 
+  workflow_run:
+    workflows: ["Daily Content Management"]
+    types:
+      - completed
+    branches: ["main"]
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
