--- a/.github/workflows/daily-content-management.yml
+++ b/.github/workflows/daily-content-management.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Commit and push changes
         run: |
           git config --local user.email "gitbot@outspy.com"
-          git config --local user.name "GitBot OutSpy"
+          git config --local user.name "Content Manager"
           git add .
           git diff --staged --quiet || git commit -m "Daily content management - $(date +%Y-%m-%d)"
           git push
