--- a/.github/workflows/restart-revision-compare.yml
+++ b/.github/workflows/restart-revision-compare.yml
@@ -30,5 +30,5 @@ jobs:
           git config --local user.email "gitbot@outspy.com"
           git config --local user.name "Compare Manager"
           git add reports/ || true
-          git diff --staged --quiet || git commit -m "restart_revision compare report - $(date +%Y-%m-%dT%H:%M:%S)"
+          git diff --staged --quiet || git commit -m "Restart revision compare report - $(date +%Y-%m-%dT%H:%M:%S)"
           git push || true
