--- a/.github/workflows/restart-revision-compare.yml
+++ b/.github/workflows/restart-revision-compare.yml
@@ -35,11 +35,7 @@ jobs:
 
       - name: Notify Slack (send md file)
         if: failure()
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         run: |
-          HEADER="*Auto-test failed*\n\n"
-          REPORT=$(cat reports/report.md)
-          PAYLOAD=$(printf "%s%s" "$HEADER" "$REPORT" | jq -Rs .)
-
-          curl -fsS -X POST -H 'Content-type: application/json' \
-            --data "{\"text\": ${PAYLOAD}}" \
-            "${{ secrets.SLACK_WEBHOOK_URL }}"
+          bash scripts/send-slack-report.sh
