--- a/.github/workflows/daily-content-management.yml
+++ b/.github/workflows/daily-content-management.yml
@@ -4,6 +4,8 @@ on:
   schedule:
     - cron: '0 0 * * *' #  At the end of every day
   workflow_dispatch:
+  repository_dispatch:
+    types: [daily-content-trigger]
 
 permissions:
   contents: write
