--- a/.github/workflows/restart-revision-compare.yml
+++ b/.github/workflows/restart-revision-compare.yml
@@ -33,9 +33,10 @@ jobs:
           git diff --staged --quiet || git commit -m "Restart revision compare report - $(date +%Y-%m-%dT%H:%M:%S)"
           git push || true
 
-      - name: Notify Slack (send md file)
-        if: failure()
+      - name: Notify Slack (send md summary)
+        if: always()
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          GRAFANA_DASH_URL: ${{ secrets.GRAFANA_DASH_URL }}
         run: |
           bash scripts/send-slack-report.sh
