--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -28,6 +28,11 @@ jobs:
         with:
           ref: main
           fetch-depth: 0
+      - name: Fetch latest changes
+        run: |
+          git fetch origin main
+          git checkout main
+          git pull origin main
       - name: Setup Ruby
         uses: ruby/setup-ruby@4a9ddd6f338a97768b8006bf671dfbad383215f4
         with:
