--- a/.github/workflows/restart-revision.yml
+++ b/.github/workflows/restart-revision.yml
@@ -17,6 +17,6 @@ jobs:
           QA_REVISION_RESTART_URL: ${{ secrets.QA_REVISION_RESTART_URL }}
         run: |
           curl -fsS --retry 3 --max-time 20 \
-            -H "X-Auth-Request-User: github-actions" \
-            -H "X-Auth-Request-Email: gitactions@outspy.net" \
+            -H "X-Auth-Request-User: ${{ secrets.ACTIONS_USER }}" \
+            -H "X-Auth-Request-Email: ${{ secrets.ACTIONS_EMAIL }}" \
             "$QA_REVISION_RESTART_URL"
