--- a/.github/workflows/trigger-report.yml
+++ b/.github/workflows/trigger-report.yml
@@ -1,6 +1,7 @@
 name: Trigger report for auto-test
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: '10 6 * * *'  # 9:10 AM Moscow time (UTC+3)
 
