--- a/.github/workflows/parsing-test.yml
+++ b/.github/workflows/parsing-test.yml
@@ -21,6 +21,10 @@ jobs:
   test:
     name: Run Parsing Tests
     runs-on: ubuntu-latest
+    if: |
+      github.event.head_commit.author.email != 'gitbot@outspy.com' &&
+      github.actor != 'github-actions[bot]' &&
+      !contains(github.actor, '[bot]')
     
     steps:
       - name: Checkout repository
